--- a/db/bouncy_ball.lpc.html
+++ b/db/bouncy_ball.lpc.html
@@ -32,10 +32,26 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >inst2|pipe1</TD>
+<TD >22</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst2</TD>
 <TD >23</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >3</TD>
 <TD >0</TD>
