--- a/db/bouncy_ball.lpc.html
+++ b/db/bouncy_ball.lpc.html
@@ -32,134 +32,6 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst11|char13|altsyncram_component|auto_generated</TD>
-<TD >10</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst11|char13</TD>
-<TD >13</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >6</TD>
-<TD >1</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst11|char12|altsyncram_component|auto_generated</TD>
-<TD >10</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst11|char12</TD>
-<TD >13</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >6</TD>
-<TD >1</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst11|char11|altsyncram_component|auto_generated</TD>
-<TD >10</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst11|char11</TD>
-<TD >13</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >6</TD>
-<TD >1</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst11|char10|altsyncram_component|auto_generated</TD>
-<TD >10</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst11|char10</TD>
-<TD >13</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >6</TD>
-<TD >1</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
 <TD >inst11|char9|altsyncram_component|auto_generated</TD>
 <TD >10</TD>
 <TD >0</TD>
@@ -450,6 +322,438 @@
 <TR >
 <TD >inst11</TD>
 <TD >29</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char13|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char13</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char12|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char12</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char11|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char11</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char10|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char10</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char9|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char9</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char8|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char8</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char7|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char7</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char6|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char6</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char5|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char5</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char4|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char4</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char3|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char3</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char2|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char2</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char1|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10|char1</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst10</TD>
+<TD >30</TD>
 <TD >0</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -1029,7 +1333,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >68</TD>
+<TD >69</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
