--- a/db/bouncy_ball.lpc.html
+++ b/db/bouncy_ball.lpc.html
@@ -16,6 +16,38 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >inst12</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >7</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst2</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst7</TD>
 <TD >4</TD>
 <TD >0</TD>
@@ -1186,13 +1218,13 @@
 <TR >
 <TD >inst4</TD>
 <TD >2</TD>
-<TD >12</TD>
-<TD >0</TD>
-<TD >12</TD>
 <TD >22</TD>
-<TD >12</TD>
-<TD >12</TD>
-<TD >12</TD>
+<TD >0</TD>
+<TD >22</TD>
+<TD >22</TD>
+<TD >22</TD>
+<TD >22</TD>
+<TD >22</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
