--- a/db/bouncy_ball.lpc.html
+++ b/db/bouncy_ball.lpc.html
@@ -1232,8 +1232,104 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >inst8|pipe6|random6</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe6|random5</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe6|random4</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe6|random3</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe6|random2</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe6|random1</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst8|pipe6</TD>
-<TD >88</TD>
+<TD >98</TD>
 <TD >32</TD>
 <TD >1</TD>
 <TD >32</TD>
@@ -1241,6 +1337,102 @@
 <TD >32</TD>
 <TD >32</TD>
 <TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe5|random6</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe5|random5</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe5|random4</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe5|random3</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe5|random2</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe5|random1</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1249,7 +1441,7 @@
 </TR>
 <TR >
 <TD >inst8|pipe5</TD>
-<TD >88</TD>
+<TD >98</TD>
 <TD >32</TD>
 <TD >1</TD>
 <TD >32</TD>
@@ -1257,6 +1449,102 @@
 <TD >32</TD>
 <TD >32</TD>
 <TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe4|random6</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe4|random5</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe4|random4</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe4|random3</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe4|random2</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe4|random1</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1265,7 +1553,7 @@
 </TR>
 <TR >
 <TD >inst8|pipe4</TD>
-<TD >88</TD>
+<TD >98</TD>
 <TD >32</TD>
 <TD >1</TD>
 <TD >32</TD>
@@ -1273,6 +1561,102 @@
 <TD >32</TD>
 <TD >32</TD>
 <TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe3|random6</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe3|random5</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe3|random4</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe3|random3</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe3|random2</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe3|random1</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1281,7 +1665,7 @@
 </TR>
 <TR >
 <TD >inst8|pipe3</TD>
-<TD >88</TD>
+<TD >98</TD>
 <TD >32</TD>
 <TD >1</TD>
 <TD >32</TD>
@@ -1289,6 +1673,102 @@
 <TD >32</TD>
 <TD >32</TD>
 <TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe2|random6</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe2|random5</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe2|random4</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe2|random3</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe2|random2</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe2|random1</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1297,7 +1777,7 @@
 </TR>
 <TR >
 <TD >inst8|pipe2</TD>
-<TD >88</TD>
+<TD >98</TD>
 <TD >32</TD>
 <TD >1</TD>
 <TD >32</TD>
@@ -1312,8 +1792,104 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >inst8|pipe1|random6</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe1|random5</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe1|random4</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe1|random3</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe1|random2</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|pipe1|random1</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >10</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst8|pipe1</TD>
-<TD >88</TD>
+<TD >98</TD>
 <TD >32</TD>
 <TD >1</TD>
 <TD >32</TD>
