--- a/db/bouncy_ball.lpc.html
+++ b/db/bouncy_ball.lpc.html
@@ -1010,13 +1010,13 @@
 <TR >
 <TD >inst8|medic1</TD>
 <TD >67</TD>
-<TD >0</TD>
 <TD >1</TD>
-<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >22</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1122,13 +1122,13 @@
 <TR >
 <TD >inst8|pipe6</TD>
 <TD >98</TD>
-<TD >32</TD>
+<TD >33</TD>
 <TD >1</TD>
+<TD >33</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1234,13 +1234,13 @@
 <TR >
 <TD >inst8|pipe5</TD>
 <TD >98</TD>
-<TD >32</TD>
+<TD >33</TD>
 <TD >1</TD>
+<TD >33</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1346,13 +1346,13 @@
 <TR >
 <TD >inst8|pipe4</TD>
 <TD >98</TD>
-<TD >32</TD>
+<TD >33</TD>
 <TD >1</TD>
+<TD >33</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1458,13 +1458,13 @@
 <TR >
 <TD >inst8|pipe3</TD>
 <TD >98</TD>
-<TD >32</TD>
+<TD >33</TD>
 <TD >1</TD>
+<TD >33</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1570,13 +1570,13 @@
 <TR >
 <TD >inst8|pipe2</TD>
 <TD >98</TD>
-<TD >32</TD>
+<TD >33</TD>
 <TD >1</TD>
+<TD >33</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1682,13 +1682,45 @@
 <TR >
 <TD >inst8|pipe1</TD>
 <TD >98</TD>
-<TD >32</TD>
+<TD >33</TD>
 <TD >1</TD>
+<TD >33</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|bird1|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8|bird1</TD>
+<TD >13</TD>
+<TD >6</TD>
+<TD >3</TD>
+<TD >6</TD>
+<TD >12</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1698,13 +1730,13 @@
 <TR >
 <TD >inst8</TD>
 <TD >33</TD>
-<TD >9</TD>
-<TD >6</TD>
-<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >78</TD>
-<TD >9</TD>
-<TD >9</TD>
-<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1987,7 +2019,7 @@
 <TD >inst1</TD>
 <TD >14</TD>
 <TD >0</TD>
-<TD >9</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >34</TD>
 <TD >0</TD>
